# tree-sitter-gitcommit

./: .gitignore  .prettierrc  .versionrc  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  parse-lang.py  pyproject.toml  setup.py  test  test2.txt  tree-sitter-gitcommit.wasm  tree-sitter.json
.github/workflows/: ci.yml  crates.yml  gh-pages.yml  npm.yml  publish.yaml
bindings/c/: tree-sitter-gitcommit.h  tree-sitter-gitcommit.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_gitcommit/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGitcommitTests/: TreeSitterGitcommitTests.swift
corpus/: body.txt  changes.txt  comments.txt  generated_comments.txt  scissor.txt  subject.txt
langs/: ahead.txt  behind.txt  deleted.txt  detached.txt  generated_separator.txt  interactive-rebase.txt  modified.txt  new_file.txt  on_branch.txt  rebasing.txt  renamed.txt  typechange.txt  up_to_date.txt
queries/: highlights.scm  injections.scm
scripts/: update-cargo-version.js
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: body.txt  changes.txt  generated_comments.txt  subject.txt  trailers.txt
