[package]
name = "tree-sitter-gitcommit"
description = "gitcommit grammar for the tree-sitter parsing library"
version = "0.4.0"
keywords = ["incremental", "parsing", "tree-sitter", "gitcommit"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/gbprod/tree-sitter-gitcommit"
edition = "2021"
license = "WTFPL"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25"
