[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-gitcommit"
description = "Gitcommit grammar for tree-sitter"
version = "0.4.0"
keywords = ["incremental", "parsing", "tree-sitter", "gitcommit"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [
  { name = "gbprod", email = "contact@gb-prod.fr" },
]
requires-python = ">=3.10"
license.text = "WTFPL"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/gbprod/tree-sitter-gitcommit"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
